tests/errors/semantics/cannot_deference_void_pointer.odl
main :: () -> void  {
    x := 0;
    xp := &x as &void;
    *xp;
};